fixed bug: keyboard not showing, sound not properly played

--- a/styles.css
+++ b/styles.css
@@ -442,7 +442,7 @@ input[type="number"] {
     }
 
     .grid-item img {
-        width: 2em;
+        width: 4vw;
     }
 
     .canvas-container {
